add routingPrefix
