# accounting/src/creditcommons/validation.ts
@@ -3,6 +3,7 @@ import { body } from "express-validator"
 export namespace CreditCommonsValidators {
   export const isGraft = () => [
     body("data.attributes.ccNodeName").isString(),
+    body("data.attributes.routingPrefix").isString(),
     body("data.attributes.lastHash").isString(),
     body("data.attributes.vostroId").isString(),
     body("data.relationships.vostro.data.type").isString(),
